<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/bottombar_item_tutor"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/tutor"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/bottombar_item_Map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/bottombar_item_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/schedule"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/bottombar_item_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile"
            app:showAsAction="ifRoom"/>

</menu>