<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@drawable/login_gradient"
        tools:context="com.androhome.neshm.LoginActivity">
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                 android:id="@+id/contentFrame"
                 android:animateLayoutChanges="true"
    >
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/neshm_logo_trans_white"
                    android:padding="@dimen/dp32"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp32"
            />
            <EditText android:layout_width="match_parent" android:layout_height="@dimen/dp51"
                      android:id="@+id/email"
                      android:background="@drawable/round_edit_text"
                      android:hint="@string/username_or_email"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"
                      android:layout_gravity="center"
                      android:drawableStart="@drawable/ic_person_outline_black_24dp"
                      android:paddingStart="@dimen/dp10"
                      android:drawablePadding="@dimen/dp5"
                      android:layout_marginLeft="@dimen/dp16"
                      android:layout_marginRight="@dimen/dp16"
            />
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText android:layout_width="match_parent" android:layout_height="@dimen/dp51"
                          android:layout_margin="@dimen/dp16"
                          android:id="@+id/password"
                          android:background="@drawable/round_edit_text"
                          android:hint="@string/password"
                          android:password="true"
                          android:textColor="@color/white"
                          android:textColorHint="@color/white"
                          android:layout_gravity="center"
                          android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                          android:paddingStart="@dimen/dp10"
                          android:drawablePadding="@dimen/dp5"
                />
                <ProgressBar
                        style="?android:attr/progressBarStyleInverse"
                        android:id="@+id/progress_bar"
                        android:progressDrawable="@drawable/red_gradient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/password"
                        android:layout_alignRight="@id/password"
                        android:layout_alignTop="@id/password"/>
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatButton android:layout_width="match_parent"
                                                       android:layout_height="@dimen/dp51"
                                                       android:id="@+id/submit_button"
                                                       android:layout_gravity="center"
                                                       android:background="@drawable/round_button"
                                                       android:text="@string/submit"
                                                       android:textColor="@color/white"
                                                       android:layout_margin="@dimen/dp16"
            />
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/forgotPasswordText"
                                                         android:layout_gravity="end"
                                                         android:layout_marginEnd="@dimen/dp32"
                                                         android:textColor="#FFFFFF"
                                                         android:text="@string/forgot_password"
            />
            <androidx.appcompat.widget.AppCompatTextView android:layout_height="match_parent"
                                                         android:layout_width="wrap_content"
                                                         android:id="@+id/SignUpText"
                                                         android:layout_gravity="center|bottom"
                                                         android:text="@string/dont_have_an_account"
                                                         android:layout_margin="@dimen/dp32"
                                                         android:textSize="18sp"
                                                         android:textColor="#FFFFFF"
            />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
