<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/login_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.androhome.neshm.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="#1976d2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/profile"
                  style="@style/Bold"
                  android:textSize="25sp"
                  android:textColor="@color/white"
        />
    </androidx.appcompat.widget.Toolbar>

    <ImageView android:layout_width="336dp" android:layout_height="421dp"
               android:src="@drawable/ic_profile_outline"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.491"
               android:id="@+id/imageView"
               android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="146dp"
            android:layout_height="146dp"
            android:src="@drawable/zayn"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/imageView" app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


    <LinearLayout android:layout_width="305dp" android:layout_height="316dp"
                  android:orientation="vertical"
                  app:layout_constraintBottom_toBottomOf="@+id/imageView"
                  app:layout_constraintStart_toStartOf="@+id/imageView"
                  app:layout_constraintEnd_toEndOf="@+id/imageView" app:layout_constraintTop_toTopOf="@+id/imageView"
                  android:id="@+id/linearLayout">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/name"
                  android:textColor="@color/black"
                  android:textSize="16sp"
                  style="@style/BoldMono"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="Zayn"
                  android:id="@+id/name"
                  android:textColor="@color/black"
                  android:textSize="16sp"
                  style="@style/RegularMonoSerif"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/email"
                  android:layout_marginTop="@dimen/dp20"
                  android:textSize="16sp"
                  android:textColor="@color/black"
                  style="@style/BoldMono"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="shuklacivyanshu967@gmail.com"
                  android:textColor="@color/black"
                  android:id="@+id/email"
                  android:textSize="20sp"
                  style="@style/RegularMonoSerif"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/phone_number"
                  android:layout_marginTop="@dimen/dp20"
                  android:textSize="16sp"
                  android:textColor="@color/black"
                  style="@style/BoldMono"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="9616519454"
                  android:textColor="@color/black"
                  android:id="@+id/phone_number"
                  android:textSize="16sp"
                  style="@style/RegularMonoSerif"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/address"
                  android:textSize="16sp"
                  android:layout_marginTop="@dimen/dp20"
                  android:textColor="@color/black"
                  style="@style/BoldMono"
        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="29 2nd Pashupati Nagar Naubasta, Kanpur, Uttar Pradesh, India"
                  android:textColor="@color/black"
                  android:textSize="16sp"
                  android:id="@+id/address"
                  style="@style/RegularMonoSerif"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
