<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.androhome.neshm.fragments.profileFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="346dp"
                android:background="@drawable/ic_repeat_grid_1"
        >

            <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="114dp"
                    android:layout_height="114dp"
                    android:src="@drawable/zayn"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/design_default_color_primary" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.316"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="match_parent">
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/personalInfoRelativeLayout"
                            android:layout_marginTop="@dimen/dp16"
                            android:layout_marginBottom="@dimen/dp16">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/personalInfoText"
                        android:layout_alignParentStart="true"
                        android:text="@string/personal_info"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/dp16"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentEnd="true"
                          android:id="@+id/personalInfoSymbol"
                          android:text=">"
                          android:textColor="@color/black"
                          android:textSize="18sp"
                          android:layout_marginEnd="@dimen/dp16"
                />
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp16"
                            android:layout_marginTop="@dimen/dp16">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/previous_orders"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_marginStart="@dimen/dp16"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentEnd="true"
                          android:text=">"
                          android:textColor="@color/black"
                          android:textSize="18sp"
                          android:layout_marginEnd="@dimen/dp16"
                />
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp16"
                            android:layout_marginTop="@dimen/dp16">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_alignParentStart="true"
                        android:text="@string/set_schedule"
                        android:textSize="18sp"
                        android:layout_marginStart="@dimen/dp16"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentEnd="true"
                          android:text=">"
                          android:textColor="@color/black"
                          android:textSize="18sp"
                          android:layout_marginEnd="@dimen/dp16"
                />
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp16"
                            android:layout_marginTop="@dimen/dp16">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_alignParentStart="true"
                        android:text="Settings"
                        android:textSize="18sp"
                        android:layout_marginStart="@dimen/dp16"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentEnd="true"
                          android:textColor="@color/black"
                          android:text=">"
                          android:textSize="18sp"
                          android:layout_marginEnd="@dimen/dp16"
                />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
